fixed Typy Logo

--- a/app/app.html
+++ b/app/app.html
@@ -3,7 +3,7 @@
     <div class="page-header">
         <div class="row">
             <div class="col-sm-2">
-                <img src="app/demo/assets/Typy_LOGO.png" width="100px">
+                <img src="Typy.PNG" width="100px">
             </div>
             <div class="col-sm-8">
                 <h2>${title}</h2>
