--- a/app/demo/pages/home.html
+++ b/app/demo/pages/home.html
@@ -16,9 +16,13 @@
 <div class="panel panel-info">
             <div class="panel-heading"><strong>Installation</strong></div>
             <div class="panel-body">
-                <p>step 1<p>
-                <p>step 1<p>
-                <p>step 1<p>
+                <p>- git clone https://github.com/rzvpopescu/typy.git</p>
+                <p>- cd typy</p>
+                <p>- jspm install (make sure you have jspm installed, or install it - npm install jspm)</p>
+                <p>- npm install typings</p>
+                <p>- typings install dt~systemjs --global</p>
+                <p>- npm install http-server</p>
+                <p>- http-server -p 8080 -o</p>
             </div>
     </div>
 
