fixed app start-up

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="config.js"></script>
   <script>    
     System.import('lib/Application.ts').then(function(app){      
-      app.Application.startUp('app/app')
+      app.Application.startUp('app/app');
     });
   </script>
 </head>
