router with parameters demo

--- a/app/demo/pages/router.html
+++ b/app/demo/pages/router.html
@@ -2,6 +2,7 @@
     <h4>${title}</h4>
     <br>
     <div class="row-fluid">   
+        <a href="#router/valueForParameter1/valueForParamter2">Open with route parameters</a>
         <ul for.bind="param of parameters">
             <li>${param.name} = ${param.value}</li>
         </ul>
